darkstat/front/static_front/custom.css
/* Tooltip container */
.tooltip {
    display: inline-block;
    position: relative;
}

/* Tooltip text */
.tooltip .tooltiptext {
    visibility: hidden;
    background-color: black;
    color: #fff;
    text-align: left;
    padding: 5px;
    border-radius: 6px;

    /* Position the tooltip text - see examples below! */
    position: absolute;
    z-index: 1;

    opacity: 0;
    transition: 0.3s;
    transition-delay: 0.3s;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext {
    visibility: visible;
    opacity: 1;
    z-index: 30;
}

.vertical_th {
    display: flex;
    flex-direction: column;
}

highlight {
    background-color: var(--infocard_text_highlight);
}

